<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lrm.cupcake.model.OrderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.FlavorFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/pink_600"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_back_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:importantForAccessibility="no"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_flavor"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/back_icon"
                        android:layout_marginStart="20dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RadioGroup
            android:id="@+id/flavor_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp">
            
            <RadioButton
                android:id="@+id/vanilla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vanilla"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:checked="@{viewModel.flavor.equals(@string/vanilla)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/vanilla)}"/>

            <RadioButton
                android:id="@+id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:checked="@{viewModel.flavor.equals(@string/chocolate)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/chocolate)}"/>

            <RadioButton
                android:id="@+id/red_velvet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_velvet"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:checked="@{viewModel.flavor.equals(@string/red_velvet)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/red_velvet)}"/>

            <RadioButton
                android:id="@+id/salted_caramel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salted_caramel"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:checked="@{viewModel.flavor.equals(@string/salted_caramel)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/salted_caramel)}"/>

            <RadioButton
                android:id="@+id/coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:checked="@{viewModel.flavor.equals(@string/coffee)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/coffee)}"/>

        </RadioGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flavor_options"
            android:layout_marginTop="15dp"
            android:background="?attr/dividerHorizontal"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@{@string/subtotal_price(viewModel.price)}"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/subtotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/pink_600"
                android:backgroundTint="@color/white" />

            <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:backgroundTint="@color/pink_600" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>