<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="startFragment"
            type="com.lrm.cupcake.fragments.StartFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.StartFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/pink_600"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="5dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/cupcake_iv"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/app_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            android:layout_marginTop="40dp"
            android:importantForAccessibility="no"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/order_cupcakes_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_cupcakes"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/cupcake_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"/>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/order_cupcakes_head"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp">
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/order_one_cupcake"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/one_cupcake"
                android:backgroundTint="@color/pink_600"
                android:onClick="@{() -> startFragment.orderCupcake(1)}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/order_six_cupcakes"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/six_cupcakes"
                android:backgroundTint="@color/pink_600"
                android:onClick="@{() -> startFragment.orderCupcake(6)}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/order_twelve_cupcakes"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/twelve_cupcakes"
                android:backgroundTint="@color/pink_600"
                android:onClick="@{() -> startFragment.orderCupcake(12)}"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>