<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lrm.cupcake.model.OrderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PickupFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/pink_600"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_back_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:importantForAccessibility="no"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_pickup_date"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/back_icon"
                        android:layout_marginStart="20dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RadioGroup
            android:id="@+id/date_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp">

            <RadioButton
                android:id="@+id/option0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Thursday"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:onClick="@{() -> viewModel.setDate(viewModel.dateOptions[0])}"
                android:checked="@{viewModel.date.equals(viewModel.dateOptions[0])}"
                android:text="@{viewModel.dateOptions[0]}"/>

            <RadioButton
                android:id="@+id/option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Friday"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:onClick="@{() -> viewModel.setDate(viewModel.dateOptions[1])}"
                android:checked="@{viewModel.date.equals(viewModel.dateOptions[1])}"
                android:text="@{viewModel.dateOptions[1]}"/>

            <RadioButton
                android:id="@+id/option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Saturday"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:onClick="@{() -> viewModel.setDate(viewModel.dateOptions[2])}"
                android:checked="@{viewModel.date.equals(viewModel.dateOptions[2])}"
                android:text="@{viewModel.dateOptions[2]}"/>

            <RadioButton
                android:id="@+id/option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Sunday"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:onClick="@{() -> viewModel.setDate(viewModel.dateOptions[3])}"
                android:checked="@{viewModel.date.equals(viewModel.dateOptions[3])}"
                android:text="@{viewModel.dateOptions[3]}"/>

        </RadioGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_options"
            android:layout_marginTop="15dp"
            android:background="?attr/dividerHorizontal"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@{@string/subtotal_price(viewModel.price)}"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/subtotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/pink_600"
                android:backgroundTint="@color/white"
                android:importantForAccessibility="no"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:backgroundTint="@color/pink_600"
                android:importantForAccessibility="no"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>